<resources>
    <string name="app_name">AppSensoresCarlos-1</string>
    <string name="accelerometter_values_string">Acelerómetro: X=0.0, Y=0.0, Z=0.0</string>
    <string name="light_values_string">Luz: 0.0 lx</string>
    <string name="panel_de_sensores_string">Panel de Sensores</string>
    <string name="subtitulo_string">Inclina el móvil y tapa/destapa el sensor de luz</string>
    <string name="acelerometro_name_string">Acelerómetro</string>
    <string name="acelerometro_values_string_formated">X: 0.00\nY: 0.00\nZ: 0.00\nMódulo: 0.00</string>
    <string name="orientacion_info_string">Orientación: Desconocida</string>
    <string name="sensor_de_luz_name_string">Sensor de luz</string>
    <string name="luz_values_string_formated">Luz: 0.0 lx\nNivel: Desconocido</string>
    <string name="not_accelerometter_warning">Este dispositivo no tiene acelerómetro.</string>
    <string name="not_light_sensor_warning">Este dispositivo no tiene sensor de luz.</string>
</resources>